--- a/template/Makefile
+++ b/template/Makefile
@@ -4,9 +4,9 @@
 
 .DEFAULT_GOAL := default
 
-.PHONY: default install lint test upgrade build clean agent-rules
+.PHONY: default install lint test upgrade build clean
 
-default: agent-rules install lint test 
+default: install lint test 
 
 install:
 	uv sync --all-extras
@@ -22,16 +22,6 @@ upgrade:
 
 build:
 	uv build
-
-agent-rules: CLAUDE.md AGENTS.md
-
-# Use .cursor/rules for sources of rules.
-# Create Claude and Codex rules from these.
-CLAUDE.md: .cursor/rules/general.mdc .cursor/rules/python.mdc
-	cat .cursor/rules/general.mdc .cursor/rules/python.mdc > CLAUDE.md
-
-AGENTS.md: .cursor/rules/general.mdc .cursor/rules/python.mdc
-	cat .cursor/rules/general.mdc .cursor/rules/python.mdc > AGENTS.md
 
 clean:
 	-rm -rf dist/
